--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 </head>
 <body>
     <div class="card" >
-      <img src="images/bg-pattern-card.svg" class="card-background">
-      <img src="images/image-victor.jpg" class="card-img-top" alt="...">
+      <img src="bg-pattern-card.svg" class="card-background">
+      <img src="image-victor.jpg" class="card-img-top" alt="...">
       <pre>           Victor Crest <span>26</span>
                 <span>London</span>  
       <hr>
