--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 </head>
 <body>
     <div class="card" >
-      <img src="bg-pattern-card.svg" class="card-background">
-      <img src="image-victor.jpg" class="card-img-top" alt="...">
+      <img src="bg-pattern-card.svg" class="card-background" alt="background">
+      <img src="image-victor.jpg" class="card-img-top" alt="profile-photo">
       <pre>           Victor Crest <span>26</span>
-                <span>London</span>  
+                <span>London</span>  </pre>
       <hr>
       <pre>
      80K         803K        1.4K
