--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 </head>
 <body>
     <div class="card" >
-      <img src="bg-pattern-card.svg" class="card-background" alt="background">
-      <img src="image-victor.jpg" class="card-img-top" alt="profile-photo">
+      <img src="images/bg-pattern-card.svg" class="card-background" alt="background">
+      <img src="images/image-victor.jpg" class="card-img-top" alt="profile photo">
       <pre>           Victor Crest <span>26</span>
                 <span>London</span>  </pre>
       <hr>
       <pre>
-     80K         803K        1.4K
-   <span>Followers</span>     <span>Likes</span>     <span> Photos</span>
+     80K          803K          1.4K
+   <span class="aid">Followers</span>   <span class="aid">Likes</span>     <span class="aid"> Photos</span>
   </pre>
     
     </div>
@@ -44,3 +44,4 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
+
