--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 18px; text-align: center; }
-    .attribution a { color:bisque ; font-family: 'Sacramento', cursive;}
+    .attribution a { color:blue ; font-family: 'Sacramento', cursive; font-size: 20px;}
   </style>
 </head>
 <body>
+  <div id="first">
     <div class="card" >
-      <img src="images/bg-pattern-card.svg" class="card-background" alt="background">
-      <img src="images/image-victor.jpg" class="card-img-top" alt="profile photo">
-      <pre>           Victor Crest <span>26</span>
-                <span>London</span>  </pre>
-      <hr>
-      <pre>
-     80K          803K          1.4K
-   <span class="aid">Followers</span>   <span class="aid">Likes</span>     <span class="aid"> Photos</span>
-  </pre>
+      <img src="bg-pattern-card.svg" class="card-background" alt="background">
+      <img src="image-victor.jpg" class="card-img-top" alt="profile photo">
+            <p>  <span class="if">Victor Crest</span>  <span class="in">26</span></p>
+                <span class="it">London</span>  
+      <hr>   
+   <p><span class="md">80K</span>   <span class="md">803K </span>    <span class="md">1.4K</span></p>
+ <p><span class="aid">Followers</span><span class="aid">Likes</span> <span class="aid"> Photos</span></p>
+
     
     </div>
-
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Shubhangini Sharma</a>.
@@ -44,4 +44,3 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
-
